--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <textarea spellcheck="true" id="txtid" name="txtname" rows="20" cols="50" maxlength="2000" placeholder="Type your text here..."></textarea>
+        <textarea spellcheck="true" id="text-editor" name="txtname" rows="20" cols="50" maxlength="2000" placeholder="Type your text here..."></textarea>
         <div>
             <button id="btn-clear">Clear</button>
             <button id="btn-copy">Copy to clipboard</button>
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div class="word-longest-container">
-            <p><p>Longest Word: <span class="info info-longest" id="longest">_ _ _ _ _ _ _ _ _ _ _ _</span></p></p>
+            <p><p>Longest Word: <span class="info info-longest" id="longest">_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ </span></p></p>
         </div>
 
     </div>
